add bash shortcut

--- a/_posts/2025-10-31-login.defs-explaination.md
+++ b/_posts/2025-10-31-login.defs-explaination.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Detail explaination of /etc/login.defs
-categories: [Linux, configuration]
+categories: [Linux]
 description: 关于/etc/login.defs文件的详细介绍
 keywords: linux, login.defs, configuration
 mermaid: false
